--- a/lab1/PT_Part1_Intro.ipynb
+++ b/lab1/PT_Part1_Intro.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "LkaimNJfYZ2w"
       },
@@ -94,11 +94,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "tFxztZQInlAB"
+        "id": "tFxztZQInlAB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ebc6192c-1fd6-4b21-8c0b-47027b3e067a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`integer` is a 0-d Tensor: 1234\n",
+            "`decimal` is a 0-d Tensor: 3.1415927410125732\n"
+          ]
+        }
+      ],
       "source": [
         "integer = torch.tensor(1234)\n",
         "decimal = torch.tensor(3.14159265359)\n",
